2009-02-17 yusei
* Hide "Add Invoice Line" from the drop down action menu until invoice support to collect multiple different orders.

2009-02-16 jerome
* copy source_account and destination_account from supply line on delivery lines, and enable this for divergence on invoice lines.

2009-02-12 yusei
* Invoice Line can now contain Invoice Line. This is useful if we want to make a invoice which collect all orders from divisions in one company and list up invoice line per each division.

2009-02-03 yo
* Editable fields must use "cell" instead of "here" in the tales expressions, so they may not use proxy fields created for my_* intact. Due to this error, total_price and total_quantity could be wrongly displayed.

2009-01-27 yusei
* Added invoice_transmission_mode category.

2008-11-13 yusei
* Start to develop version 5.4.

2008-10-14 yusei
* Start to develop version 5.3.

2008-09-16 Kazuhiko
* revise payment_transaction_builder, purchase_invoice_builder, purchase_invoice_tax_builder, purchase_invoice_transaction_builder, sale_invoice_builder, sale_invoice_tax_builder and sale_invoice_transaction_builder using new API.

2008-09-04 yusei
* Update English messages.

2008-08-28 yusei
* Use Base_translateString or translateString instead of N_ for translation string.

2008-06-27 yusei
* Start to develop version 5.2.

2008-06-26 yusei
* Revise version to 5.1.

2008-3-18 jerome
* Use trade conditions with invoices
* version 5.0

2008-3-16 nicolas
* add Print action for Invoices

2003-03-12 jerome
* Cleanup forms and add proxy fields

2007-12-06 kazuhiko
* use related_simulation_movement_path_list to reduce activity dependencies.

2007-12-6 jerome
* initial creation, from splitting erp5_accounting